delete overflow-x scroll in message

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,3 +30,10 @@ body {
   color: black !important;
 }
 
+.ant-list-item-meta-content {
+  overflow-x: visible;
+}
+
+.ant-list-item-meta-description {
+  display: block;
+}
